--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -8,7 +8,7 @@
   <ion-navbar color="primary" text-center>
     <ion-title>Lobby</ion-title>
     <ion-buttons end side="primary">
-      <button ion-button icon-only (click)="toLogOut()" *ngIf="showLog">
+      <button ion-button icon-only (click)="toLogOut()">
         <ion-icon name="log-out"></ion-icon>
       </button>
     </ion-buttons>
